--- a/frontend_0.0.3 (plain)/index.html
+++ b/frontend_0.0.3 (plain)/index.html
@@ -26,12 +26,17 @@
     <!--google icons-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+
     <title>We are art</title>
 </head>
 
 <body>
     <div class="main">
-        
+
         <!-------------------------------------------------->
         <!-----------------------FRAME---------------------->
         <!-------------------------------------------------->
